deploy: 133ffd08208ff864023e9f3766365b9724982eb4

--- a/genindex.html
+++ b/genindex.html
@@ -234,6 +234,8 @@
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="index.html#t2d2_sdk.T2D2.slack_notification">slack_notification() (t2d2_sdk.T2D2 method)</a>
+</li>
       <li><a href="index.html#t2d2_sdk.T2D2.summarize_conditions">summarize_conditions() (t2d2_sdk.T2D2 method)</a>
 </li>
       <li><a href="index.html#t2d2_sdk.T2D2.summarize_images">summarize_images() (t2d2_sdk.T2D2 method)</a>
