--- a/genindex.html
+++ b/genindex.html
@@ -4,10 +4,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Index &#8212; T2D2 SDK v1.0 documentation</title>
-    <link rel="stylesheet" type="text/css" href="_static/pygments.css?v=a746c00c" />
+    <title>Index &#8212; T2D2 SDK v1.1 documentation</title>
+    <link rel="stylesheet" type="text/css" href="_static/pygments.css?v=8f2a1f02" />
     <link rel="stylesheet" type="text/css" href="_static/nature.css?v=8fc2db88" />
-    <script data-url_root="./" id="documentation_options" src="_static/documentation_options.js?v=99a04888"></script>
+    <script data-url_root="./" id="documentation_options" src="_static/documentation_options.js?v=3dd8cc91"></script>
     <script src="_static/doctools.js?v=888ff710"></script>
     <script src="_static/sphinx_highlight.js?v=4825356b"></script>
     <link rel="index" title="Index" href="#" />
@@ -22,7 +22,7 @@
         <li class="right" >
           <a href="py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="index.html">T2D2 SDK v1.0 documentation</a> &#187;</li>
+        <li class="nav-item nav-item-0"><a href="index.html">T2D2 SDK v1.1 documentation</a> &#187;</li>
         <li class="nav-item nav-item-this"><a href="">Index</a></li> 
       </ul>
     </div>  
@@ -36,35 +36,21 @@
 <h1 id="index">Index</h1>
 
 <div class="genindex-jumpbox">
- <a href="#_"><strong>_</strong></a>
- | <a href="#A"><strong>A</strong></a>
- | <a href="#B"><strong>B</strong></a>
+ <a href="#A"><strong>A</strong></a>
  | <a href="#D"><strong>D</strong></a>
  | <a href="#G"><strong>G</strong></a>
- | <a href="#H"><strong>H</strong></a>
  | <a href="#L"><strong>L</strong></a>
  | <a href="#M"><strong>M</strong></a>
  | <a href="#N"><strong>N</strong></a>
- | <a href="#P"><strong>P</strong></a>
  | <a href="#R"><strong>R</strong></a>
  | <a href="#S"><strong>S</strong></a>
  | <a href="#T"><strong>T</strong></a>
  | <a href="#U"><strong>U</strong></a>
  
 </div>
-<h2 id="_">_</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="index.html#t2d2_sdk.T2D2.__init__">__init__() (t2d2_sdk.T2D2 method)</a>
-</li>
-  </ul></td>
-</tr></table>
-
 <h2 id="A">A</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="index.html#t2d2_sdk.T2D2.access_token">access_token (t2d2_sdk.T2D2 attribute)</a>
-</li>
       <li><a href="index.html#t2d2_sdk.T2D2.add_annotation_class">add_annotation_class() (t2d2_sdk.T2D2 method)</a>
 </li>
       <li><a href="index.html#t2d2_sdk.T2D2.add_annotations">add_annotations() (t2d2_sdk.T2D2 method)</a>
@@ -79,30 +65,12 @@
 </li>
       <li><a href="index.html#t2d2_sdk.T2D2.add_tags">add_tags() (t2d2_sdk.T2D2 method)</a>
 </li>
-      <li><a href="index.html#t2d2_sdk.T2D2.api_key">api_key (t2d2_sdk.T2D2 attribute)</a>
-</li>
-      <li><a href="index.html#t2d2_sdk.T2D2.aws_region">aws_region (t2d2_sdk.T2D2 attribute)</a>
-</li>
-  </ul></td>
-</tr></table>
-
-<h2 id="B">B</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="index.html#t2d2_sdk.T2D2.base_url">base_url (t2d2_sdk.T2D2 attribute)</a>
-</li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="index.html#t2d2_sdk.T2D2.bucket">bucket (t2d2_sdk.T2D2 attribute)</a>
-</li>
   </ul></td>
 </tr></table>
 
 <h2 id="D">D</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="index.html#t2d2_sdk.T2D2.debug">debug (t2d2_sdk.T2D2 attribute)</a>
-</li>
       <li><a href="index.html#t2d2_sdk.T2D2.delete_annotation_classes">delete_annotation_classes() (t2d2_sdk.T2D2 method)</a>
 </li>
       <li><a href="index.html#t2d2_sdk.T2D2.delete_annotations">delete_annotations() (t2d2_sdk.T2D2 method)</a>
@@ -111,10 +79,10 @@
 </li>
       <li><a href="index.html#t2d2_sdk.T2D2.delete_geotags">delete_geotags() (t2d2_sdk.T2D2 method)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="index.html#t2d2_sdk.T2D2.delete_images">delete_images() (t2d2_sdk.T2D2 method)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="index.html#t2d2_sdk.T2D2.delete_reports">delete_reports() (t2d2_sdk.T2D2 method)</a>
 </li>
       <li><a href="index.html#t2d2_sdk.T2D2.delete_threed">delete_threed() (t2d2_sdk.T2D2 method)</a>
@@ -153,6 +121,8 @@
 </li>
       <li><a href="index.html#t2d2_sdk.T2D2.get_project_info">get_project_info() (t2d2_sdk.T2D2 method)</a>
 </li>
+      <li><a href="index.html#t2d2_sdk.T2D2.get_regions">get_regions() (t2d2_sdk.T2D2 method)</a>
+</li>
       <li><a href="index.html#t2d2_sdk.T2D2.get_reports">get_reports() (t2d2_sdk.T2D2 method)</a>
 </li>
       <li><a href="index.html#t2d2_sdk.T2D2.get_tags">get_tags() (t2d2_sdk.T2D2 method)</a>
@@ -160,14 +130,6 @@
       <li><a href="index.html#t2d2_sdk.T2D2.get_threed">get_threed() (t2d2_sdk.T2D2 method)</a>
 </li>
       <li><a href="index.html#t2d2_sdk.T2D2.get_videos">get_videos() (t2d2_sdk.T2D2 method)</a>
-</li>
-  </ul></td>
-</tr></table>
-
-<h2 id="H">H</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="index.html#t2d2_sdk.T2D2.headers">headers (t2d2_sdk.T2D2 attribute)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -201,14 +163,6 @@
   </ul></td>
 </tr></table>
 
-<h2 id="P">P</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="index.html#t2d2_sdk.T2D2.project">project (t2d2_sdk.T2D2 attribute)</a>
-</li>
-  </ul></td>
-</tr></table>
-
 <h2 id="R">R</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -228,14 +182,12 @@
 <h2 id="S">S</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="index.html#t2d2_sdk.T2D2.s3_base_url">s3_base_url (t2d2_sdk.T2D2 attribute)</a>
-</li>
       <li><a href="index.html#t2d2_sdk.T2D2.set_project">set_project() (t2d2_sdk.T2D2 method)</a>
+</li>
+      <li><a href="index.html#t2d2_sdk.T2D2.slack_notification">slack_notification() (t2d2_sdk.T2D2 method)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="index.html#t2d2_sdk.T2D2.slack_notification">slack_notification() (t2d2_sdk.T2D2 method)</a>
-</li>
       <li><a href="index.html#t2d2_sdk.T2D2.summarize_conditions">summarize_conditions() (t2d2_sdk.T2D2 method)</a>
 </li>
       <li><a href="index.html#t2d2_sdk.T2D2.summarize_images">summarize_images() (t2d2_sdk.T2D2 method)</a>
@@ -327,7 +279,7 @@
         <li class="right" >
           <a href="py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="index.html">T2D2 SDK v1.0 documentation</a> &#187;</li>
+        <li class="nav-item nav-item-0"><a href="index.html">T2D2 SDK v1.1 documentation</a> &#187;</li>
         <li class="nav-item nav-item-this"><a href="">Index</a></li> 
       </ul>
     </div>
