--- a/genindex.html
+++ b/genindex.html
@@ -99,6 +99,10 @@
 <h2 id="G">G</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="index.html#t2d2_sdk.T2D2.get_ai_model_by_id">get_ai_model_by_id() (t2d2_sdk.T2D2 method)</a>
+</li>
+      <li><a href="index.html#t2d2_sdk.T2D2.get_ai_models">get_ai_models() (t2d2_sdk.T2D2 method)</a>
+</li>
       <li><a href="index.html#t2d2_sdk.T2D2.get_annotation_classes">get_annotation_classes() (t2d2_sdk.T2D2 method)</a>
 </li>
       <li><a href="index.html#t2d2_sdk.T2D2.get_annotations">get_annotations() (t2d2_sdk.T2D2 method)</a>
@@ -111,10 +115,10 @@
 </li>
       <li><a href="index.html#t2d2_sdk.T2D2.get_geotags">get_geotags() (t2d2_sdk.T2D2 method)</a>
 </li>
-      <li><a href="index.html#t2d2_sdk.T2D2.get_images">get_images() (t2d2_sdk.T2D2 method)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="index.html#t2d2_sdk.T2D2.get_images">get_images() (t2d2_sdk.T2D2 method)</a>
+</li>
       <li><a href="index.html#t2d2_sdk.T2D2.get_materials">get_materials() (t2d2_sdk.T2D2 method)</a>
 </li>
       <li><a href="index.html#t2d2_sdk.T2D2.get_project">get_project() (t2d2_sdk.T2D2 method)</a>
@@ -175,6 +179,8 @@
       <li><a href="index.html#t2d2_sdk.T2D2.request">request() (t2d2_sdk.T2D2 method)</a>
 </li>
       <li><a href="index.html#t2d2_sdk.RequestType">RequestType (class in t2d2_sdk)</a>
+</li>
+      <li><a href="index.html#t2d2_sdk.T2D2.run_ai_inferencer">run_ai_inferencer() (t2d2_sdk.T2D2 method)</a>
 </li>
   </ul></td>
 </tr></table>
