--- a/genindex.html
+++ b/genindex.html
@@ -115,10 +115,10 @@
 </li>
       <li><a href="index.html#t2d2_sdk.T2D2.get_geotags">get_geotags() (t2d2_sdk.T2D2 method)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="index.html#t2d2_sdk.T2D2.get_images">get_images() (t2d2_sdk.T2D2 method)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="index.html#t2d2_sdk.T2D2.get_materials">get_materials() (t2d2_sdk.T2D2 method)</a>
 </li>
       <li><a href="index.html#t2d2_sdk.T2D2.get_project">get_project() (t2d2_sdk.T2D2 method)</a>
@@ -130,6 +130,10 @@
       <li><a href="index.html#t2d2_sdk.T2D2.get_reports">get_reports() (t2d2_sdk.T2D2 method)</a>
 </li>
       <li><a href="index.html#t2d2_sdk.T2D2.get_tags">get_tags() (t2d2_sdk.T2D2 method)</a>
+</li>
+      <li><a href="index.html#t2d2_sdk.T2D2.get_task_by_id">get_task_by_id() (t2d2_sdk.T2D2 method)</a>
+</li>
+      <li><a href="index.html#t2d2_sdk.T2D2.get_task_list">get_task_list() (t2d2_sdk.T2D2 method)</a>
 </li>
       <li><a href="index.html#t2d2_sdk.T2D2.get_threed">get_threed() (t2d2_sdk.T2D2 method)</a>
 </li>
