deploy: 656eb8c5947c6f3d45cc0f2a5a804b930239b8e7

--- a/genindex.html
+++ b/genindex.html
@@ -4,10 +4,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Index &#8212; T2D2 SDK v1.1 documentation</title>
+    <title>Index &#8212; T2D2 SDK v1.5 documentation</title>
     <link rel="stylesheet" type="text/css" href="_static/pygments.css?v=8f2a1f02" />
     <link rel="stylesheet" type="text/css" href="_static/nature.css?v=8fc2db88" />
-    <script data-url_root="./" id="documentation_options" src="_static/documentation_options.js?v=3dd8cc91"></script>
+    <script data-url_root="./" id="documentation_options" src="_static/documentation_options.js?v=c1a9d636"></script>
     <script src="_static/doctools.js?v=888ff710"></script>
     <script src="_static/sphinx_highlight.js?v=4825356b"></script>
     <link rel="index" title="Index" href="#" />
@@ -22,7 +22,7 @@
         <li class="right" >
           <a href="py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="index.html">T2D2 SDK v1.1 documentation</a> &#187;</li>
+        <li class="nav-item nav-item-0"><a href="index.html">T2D2 SDK v1.5 documentation</a> &#187;</li>
         <li class="nav-item nav-item-this"><a href="">Index</a></li> 
       </ul>
     </div>  
@@ -37,6 +37,7 @@
 
 <div class="genindex-jumpbox">
  <a href="#A"><strong>A</strong></a>
+ | <a href="#C"><strong>C</strong></a>
  | <a href="#D"><strong>D</strong></a>
  | <a href="#G"><strong>G</strong></a>
  | <a href="#L"><strong>L</strong></a>
@@ -68,6 +69,14 @@
   </ul></td>
 </tr></table>
 
+<h2 id="C">C</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="index.html#t2d2_sdk.T2D2.create_dataset">create_dataset() (t2d2_sdk.T2D2 method)</a>
+</li>
+  </ul></td>
+</tr></table>
+
 <h2 id="D">D</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -75,14 +84,16 @@
 </li>
       <li><a href="index.html#t2d2_sdk.T2D2.delete_annotations">delete_annotations() (t2d2_sdk.T2D2 method)</a>
 </li>
+      <li><a href="index.html#t2d2_sdk.T2D2.delete_datasets">delete_datasets() (t2d2_sdk.T2D2 method)</a>
+</li>
       <li><a href="index.html#t2d2_sdk.T2D2.delete_drawings">delete_drawings() (t2d2_sdk.T2D2 method)</a>
 </li>
       <li><a href="index.html#t2d2_sdk.T2D2.delete_geotags">delete_geotags() (t2d2_sdk.T2D2 method)</a>
 </li>
-      <li><a href="index.html#t2d2_sdk.T2D2.delete_images">delete_images() (t2d2_sdk.T2D2 method)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="index.html#t2d2_sdk.T2D2.delete_images">delete_images() (t2d2_sdk.T2D2 method)</a>
+</li>
       <li><a href="index.html#t2d2_sdk.T2D2.delete_reports">delete_reports() (t2d2_sdk.T2D2 method)</a>
 </li>
       <li><a href="index.html#t2d2_sdk.T2D2.delete_threed">delete_threed() (t2d2_sdk.T2D2 method)</a>
@@ -110,6 +121,8 @@
       <li><a href="index.html#t2d2_sdk.T2D2.get_assets">get_assets() (t2d2_sdk.T2D2 method)</a>
 </li>
       <li><a href="index.html#t2d2_sdk.T2D2.get_classes">get_classes() (t2d2_sdk.T2D2 method)</a>
+</li>
+      <li><a href="index.html#t2d2_sdk.T2D2.get_datasets">get_datasets() (t2d2_sdk.T2D2 method)</a>
 </li>
       <li><a href="index.html#t2d2_sdk.T2D2.get_drawings">get_drawings() (t2d2_sdk.T2D2 method)</a>
 </li>
@@ -227,6 +240,8 @@
 <h2 id="U">U</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="index.html#t2d2_sdk.T2D2.update_dataset_images">update_dataset_images() (t2d2_sdk.T2D2 method)</a>
+</li>
       <li><a href="index.html#t2d2_sdk.T2D2.update_drawings">update_drawings() (t2d2_sdk.T2D2 method)</a>
 </li>
       <li><a href="index.html#t2d2_sdk.T2D2.update_images">update_images() (t2d2_sdk.T2D2 method)</a>
@@ -289,7 +304,7 @@
         <li class="right" >
           <a href="py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="index.html">T2D2 SDK v1.1 documentation</a> &#187;</li>
+        <li class="nav-item nav-item-0"><a href="index.html">T2D2 SDK v1.5 documentation</a> &#187;</li>
         <li class="nav-item nav-item-this"><a href="">Index</a></li> 
       </ul>
     </div>
