deploy: 19cf6ee0f61baa31241a1de4600d65f3e476f0f5

--- a/genindex.html
+++ b/genindex.html
@@ -72,6 +72,10 @@
 <h2 id="C">C</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="index.html#t2d2_sdk.T2D2.create_ai_model">create_ai_model() (t2d2_sdk.T2D2 method)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="index.html#t2d2_sdk.T2D2.create_dataset">create_dataset() (t2d2_sdk.T2D2 method)</a>
 </li>
   </ul></td>
@@ -80,6 +84,8 @@
 <h2 id="D">D</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="index.html#t2d2_sdk.T2D2.delete_ai_model">delete_ai_model() (t2d2_sdk.T2D2 method)</a>
+</li>
       <li><a href="index.html#t2d2_sdk.T2D2.delete_annotation_classes">delete_annotation_classes() (t2d2_sdk.T2D2 method)</a>
 </li>
       <li><a href="index.html#t2d2_sdk.T2D2.delete_annotations">delete_annotations() (t2d2_sdk.T2D2 method)</a>
@@ -240,6 +246,8 @@
 <h2 id="U">U</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="index.html#t2d2_sdk.T2D2.update_ai_model">update_ai_model() (t2d2_sdk.T2D2 method)</a>
+</li>
       <li><a href="index.html#t2d2_sdk.T2D2.update_dataset_images">update_dataset_images() (t2d2_sdk.T2D2 method)</a>
 </li>
       <li><a href="index.html#t2d2_sdk.T2D2.update_drawings">update_drawings() (t2d2_sdk.T2D2 method)</a>
@@ -252,10 +260,10 @@
 </li>
       <li><a href="index.html#t2d2_sdk.T2D2.update_threed">update_threed() (t2d2_sdk.T2D2 method)</a>
 </li>
-      <li><a href="index.html#t2d2_sdk.T2D2.update_videos">update_videos() (t2d2_sdk.T2D2 method)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="index.html#t2d2_sdk.T2D2.update_videos">update_videos() (t2d2_sdk.T2D2 method)</a>
+</li>
       <li><a href="index.html#t2d2_sdk.T2D2.upload_downloads">upload_downloads() (t2d2_sdk.T2D2 method)</a>
 </li>
       <li><a href="index.html#t2d2_sdk.T2D2.upload_drawings">upload_drawings() (t2d2_sdk.T2D2 method)</a>
