--- a/genindex.html
+++ b/genindex.html
@@ -78,6 +78,8 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="index.html#t2d2_sdk.T2D2.create_dataset">create_dataset() (t2d2_sdk.T2D2 method)</a>
 </li>
+      <li><a href="index.html#t2d2_sdk.T2D2.create_project">create_project() (t2d2_sdk.T2D2 method)</a>
+</li>
   </ul></td>
 </tr></table>
 
